--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,4 @@
 {
-    "app.title": "Welcome to react-intl",
-    "app.intro": "To get started, edit <code>src/App.js</code> and save to reload."
+	"app.intro": "To get started, edit <code>src/App.js</code> and save to reload.",
+	"app.title": "Welcome to react-intl"
 }
